--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sgranger2.github.io/RobotFinder",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.2.0",
